--- a/index.ipynb
+++ b/index.ipynb
@@ -211,7 +211,7 @@
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    x = first_neighbor['avenue'] - \n",
+    "    x = first_neighbor['avenue'] - second_neighbor\n",
     "    pass"
    ]
   },
