--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,7 @@
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
     "    x = first_neighbor['avenue'] - second_neighbor['avenue']\n",
-    "    y= first_neighbor['str']\n",
+    "    y= first_neighbor['street'] - second_neighbor['stre']\n",
     "    pass"
    ]
   },
