--- a/index.ipynb
+++ b/index.ipynb
@@ -204,15 +204,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
     "    x = first_neighbor['avenue'] - second_neighbor['avenue']\n",
-    "    y= first_neighbor['street'] - second_neighbor['stre']\n",
+    "    y= first_neighbor['street'] - second_neighbor['street']\n",
+    "    distance=\n",
     "    pass"
    ]
   },
