Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -211,7 +211,7 @@
     "def street_distance(first_neighbor, second_neighbor):\n",
     "    x = first_neighbor['avenue'] - second_neighbor['avenue']\n",
     "    y= first_neighbor['street'] - second_neighbor['street']\n",
-    "    distance= sqrt(x**+\n",
+    "    distance= sqrt(x**+y**)\n",
     "    pass"
    ]
   },
