Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -204,14 +204,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-7-8be1a1022a45>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-8be1a1022a45>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    distance= sqrt(x**+y**)\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
     "    x = first_neighbor['avenue'] - second_neighbor['avenue']\n",
     "    y= first_neighbor['street'] - second_neighbor['street']\n",
     "    distance= sqrt(x**+y**)\n",
+    "    return distance\n",
     "    pass"
    ]
   },
