Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,8 @@
     "def street_distance(first_neighbor, second_neighbor):\n",
     "    x = first_neighbor['avenue'] - second_neighbor['avenue']\n",
     "    y= first_neighbor['street'] - second_neighbor['street']\n",
-    "    c_sq=x**+\n",
+    "    c_sq=x** + y**\n",
+    "    distance= \n",
     "    return distance\n",
     "    pass"
    ]
