Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -204,15 +204,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-705b8209722f>, line 4)",
+     "evalue": "invalid syntax (<ipython-input-9-7377b77ec2e7>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-705b8209722f>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    distance= sqrt(x** + y**)\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-7377b77ec2e7>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    c_sq=x** + y**\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -221,7 +221,7 @@
     "    x = first_neighbor['avenue'] - second_neighbor['avenue']\n",
     "    y= first_neighbor['street'] - second_neighbor['street']\n",
     "    c_sq=x** + y**\n",
-    "    distance= \n",
+    "    distance= sqrt(c_sq)\n",
     "    return distance\n",
     "    pass"
    ]
