Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -204,15 +204,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-9-7377b77ec2e7>, line 4)",
+     "evalue": "invalid syntax (<ipython-input-10-b1c88e161386>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-7377b77ec2e7>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    c_sq=x** + y**\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-b1c88e161386>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    c_sq=x*x y*y\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -220,7 +220,7 @@
     "def street_distance(first_neighbor, second_neighbor):\n",
     "    x = first_neighbor['avenue'] - second_neighbor['avenue']\n",
     "    y= first_neighbor['street'] - second_neighbor['street']\n",
-    "    c_sq=x** + y**\n",
+    "    c_sq=x*x y*y\n",
     "    distance= sqrt(c_sq)\n",
     "    return distance\n",
     "    pass"
