Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,7 @@
     "    x = first_neighbor['avenue'] - second_neighbor['avenue']\n",
     "    y= first_neighbor['street'] - second_neighbor['street']\n",
     "    c_sq=x*x + y*y\n",
-    "    distance= sqrt(c_sq)\n",
+    "    distance= mathsqrt(c_sq)\n",
     "    return distance\n",
     "    pass"
    ]
