--- a/index.ipynb
+++ b/index.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
     "    y= first_neighbor['street'] - second_neighbor['street']\n",
     "    c_sq=x**2 + y**2\n",
     "    distance= math.sqrt(c_sq)\n",
-    "    return int(distance\n",
+    "    return int(distance)\n",
     "    pass"
    ]
   },
@@ -227,16 +227,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.123105625617661"
+       "4"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
