--- a/index.ipynb
+++ b/index.ipynb
@@ -204,17 +204,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "def street_distance(first_neighbor, second_neighbor):\n",
     "    x = first_neighbor['avenue'] - second_neighbor['avenue']\n",
-    "    y= first_neighbor['street'] - second_neighbor['street']\n",
-    "    c_sq=x**2 + y**2\n",
-    "    distance= math.sqrt(c_sq)\n",
-    "    return int(distance)\n",
+    "    return x\n",
     "    pass"
    ]
   },
@@ -227,16 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "-1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
