Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -204,13 +204,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    x = first_neighbor['avenue'] - second_neighbor['avenue']\n",
+    "    x = first_neighbor['street'] - second_neighbor['street']\n",
     "    return x\n",
     "    pass"
    ]
@@ -224,16 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1"
+       "4"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,6 +258,7 @@
    "outputs": [],
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
+    "    if first_neighbor['avenue']>\n",
     "    pass"
    ]
   },
