--- a/index.ipynb
+++ b/index.ipynb
@@ -258,7 +258,8 @@
    "outputs": [],
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
-    "    if first_neighbor['avenue']>\n",
+    "    if first_neighbor['avenue']>second_neighbor['avenue']:\n",
+    "        return first_neighbor['avenue']-\n",
     "    pass"
    ]
   },
