--- a/index.ipynb
+++ b/index.ipynb
@@ -251,25 +251,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
     "    if first_neighbor['avenue']>second_neighbor['avenue']:\n",
-    "        return first_neighbor['avenue']-\n",
+    "        return first_neighbor['avenue']-second_neighbor['avenue']\n",
+    "    else:\n",
+    "        return second_neighbor['avenue']-first_neighbor['avenue']\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "avenue_distance(fred, natalie) #  1"
    ]
