Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -306,6 +306,7 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
+    "    c_sq = avenue_distanc\n",
     "    pass"
    ]
   },
