Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -299,23 +299,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    c_sq = avenue_distanc\n",
+    "    c_sq = avenue_distance(first_neighbor, second_neighbor)**2 + street_distance(first_neighbor, second_neighbor)**2\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "distance_between_neighbors_squared(fred, natalie) # 17"
