--- a/index.ipynb
+++ b/index.ipynb
@@ -299,20 +299,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
     "    c_sq = avenue_distance(first_neighbor, second_neighbor)**2 + street_distance(first_neighbor, second_neighbor)**2\n",
+    "    return c_sq\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distance_between_neighbors_squared(fred, natalie) # 17"
    ]
