Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -353,6 +353,7 @@
    "source": [
     "import math\n",
     "def distance(first_neighbor, second_neighbor):\n",
+    "    x=first_neighbor['avenue']-\n",
     "    pass"
    ]
   },
