Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -353,7 +353,8 @@
    "source": [
     "import math\n",
     "def distance(first_neighbor, second_neighbor):\n",
-    "    x=first_neighbor['avenue']-\n",
+    "    x=first_neighbor['avenue']-second_neighbor['avenue']\n",
+    "    y=first_neighbor['street']-\n",
     "    pass"
    ]
   },
