Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -354,7 +354,9 @@
     "import math\n",
     "def distance(first_neighbor, second_neighbor):\n",
     "    x=first_neighbor['avenue']-second_neighbor['avenue']\n",
-    "    y=first_neighbor['street']-\n",
+    "    y=first_neighbor['street']-second_neighbor['street']\n",
+    "    c_sq=x**2+y**2\n",
+    "    distance=math.sqrt(c_s)\n",
     "    pass"
    ]
   },
