Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -345,10 +345,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
@@ -356,17 +354,27 @@
     "    x=first_neighbor['avenue']-second_neighbor['avenue']\n",
     "    y=first_neighbor['street']-second_neighbor['street']\n",
     "    c_sq=x**2+y**2\n",
-    "    distance=math.sqrt(c_s)\n",
+    "    distance=math.sqrt(c_sq)\n",
+    "    return distance\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.123105625617661"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distance(fred, natalie) # 4.123105625617661"
    ]
@@ -396,11 +404,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0,\n",
+       " 4.242640687119285,\n",
+       " 1.0,\n",
+       " 5.385164807134504,\n",
+       " 2.23606797749979,\n",
+       " 4.123105625617661]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distances = []\n",
     "for neighbor in neighbors:\n",
