--- a/index.ipynb
+++ b/index.ipynb
@@ -451,6 +451,8 @@
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
+    "    for neighbor in neighbors:\n",
+    "        distance_betwe\n",
     "    pass"
    ]
   },
