Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,14 +354,14 @@
     "    x=first_neighbor['avenue']-second_neighbor['avenue']\n",
     "    y=first_neighbor['street']-second_neighbor['street']\n",
     "    c_sq=x**2+y**2\n",
-    "    distance=math.sqrt(c_sq)\n",
-    "    return distance\n",
+    "    distancee=math.sqrt(c_sq)\n",
+    "    return distancee\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
        "4.123105625617661"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    for neighbor in neighbors:\n",
-    "        distance_betwe\n",
+    "        distance_between=distance(first_neighbor, second)\n",
     "    pass"
    ]
   },
