--- a/index.ipynb
+++ b/index.ipynb
@@ -450,9 +450,11 @@
    "outputs": [],
    "source": [
     "import math\n",
+    "dictt={}\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    for neighbor in neighbors:\n",
     "        distance_between=distance(first_neighbor, second_neighbor)\n",
+    "        dictt.append{}\n",
     "    pass"
    ]
   },
