--- a/index.ipynb
+++ b/index.ipynb
@@ -454,7 +454,7 @@
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    for neighbor in neighbors:\n",
     "        distance_between=distance(first_neighbor, second_neighbor)\n",
-    "        dictt['first_']    pass"
+    "        dictt['second_neighbor']=[distance_between]    pass"
    ]
   },
   {
