--- a/index.ipynb
+++ b/index.ipynb
@@ -450,10 +450,10 @@
    "outputs": [],
    "source": [
     "import math\n",
-    "dictt={}\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    distance_between=distance(first_neighbor, second_neighbor)\n",
     "    neighbors[second_neighbor]['distance']=['distance_between']\n",
+    "    return\n",
     "        "
    ]
   },
