--- a/index.ipynb
+++ b/index.ipynb
@@ -450,8 +450,8 @@
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    distance_between=distance(first_neighbor, second_neighbor)\n",
-    "    neighbors[second_neighbor]['distance']=[distance_between]\n",
-    "    return neighbors[second_neighbor]\n",
+    "    for neighbor in neighbors:\n",
+    "        if neighbor\n",
     "        "
    ]
   },
