--- a/index.ipynb
+++ b/index.ipynb
@@ -451,7 +451,8 @@
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    distance_between=distance(first_neighbor, second_neighbor)\n",
     "    for neighbor in neighbors:\n",
-    "        if neighbors[neighbor]['name']===\n",
+    "        if neighbors[neighbor]['name']===title(second_neighbor):\n",
+    "            \n",
     "        "
    ]
   },
