Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -452,7 +452,7 @@
     "    distance_between=distance(first_neighbor, second_neighbor)\n",
     "    for neighbor in neighbors:\n",
     "        if neighbors[neighbor]['name']===title(second_neighbor):\n",
-    "            new_dict = neighbors[neighbor]\n",
+    "            new_dict = neighbors[neighbor]['']\n",
     "        "
    ]
   },
