--- a/index.ipynb
+++ b/index.ipynb
@@ -449,7 +449,8 @@
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    distance=\n",
+    "    distance_between= distance(first_neighbor, second_neighbor)\n",
+    "    \n",
     "    \n",
     "        "
    ]
