--- a/index.ipynb
+++ b/index.ipynb
@@ -450,7 +450,7 @@
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    distance_between= distance(first_neighbor, second_neighbor)\n",
-    "    \n",
+    "    secondNeighbor=second_neigh\n",
     "    \n",
     "        "
    ]
