--- a/index.ipynb
+++ b/index.ipynb
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    distance_between= distance(first_neighbor, second_neighbor)\n",
     "    secondNeighbor=second_neighbor\n",
-    "    secondNeighbor['distance']=int(distance_between)\n",
+    "    secondNeighbor['distance']=distance_between\n",
     "    return secondNeighbor\n",
     "    \n",
     "        "
@@ -459,16 +459,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4}"
+       "{'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,6 +494,7 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
+    "    return list(map(dis))\n",
     "    pass"
    ]
   },
