Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -492,7 +492,7 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    distance= list(map(lamba)\n",
+    "    new_neighbor_list= list(map(lambda neighbor: neighbors!= first)\n",
     "    pass"
    ]
   },
