--- a/index.ipynb
+++ b/index.ipynb
@@ -492,7 +492,9 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    new_neighbor_list= list(map(lambda neighbor: neighbors!= first)\n",
+    "    new_neighbor_list= list(map(lambda neighbor: neighbors!= first_neighbor, neighbors))\n",
+    "    return list(map())\n",
+    "                            \n",
     "    pass"
    ]
   },
