Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -493,7 +493,7 @@
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    new_neighbor_list= list(map(lambda neighbor: neighbors!= first_neighbor, neighbors))\n",
-    "    return list(map())\n",
+    "    return list(map(distance_with_neighbor(first_neighbor, )))\n",
     "                            \n",
     "    pass"
    ]
