--- a/index.ipynb
+++ b/index.ipynb
@@ -493,7 +493,7 @@
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "    new_neighbor_list= list(map(lambda neighbor: neighbors!= first_neighbor, neighbors))\n",
-    "    return list(map(distance_with_neighbor(first_neighbor, neighbor),new_neighbor_list))\n",
+    "    return list(map(lambda neighbor: distance_with_neighbor(first_neighbor, neighbor),new_neighbor_list))\n",
     "                            \n",
     "    pass"
    ]
