--- a/index.ipynb
+++ b/index.ipynb
@@ -492,8 +492,8 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    new_neighbor_list= list(map(lambda neighbor: neighbors!= first_neighbor, neighbors))\n",
-    "    return list(map(lambda neighbor: distance_with_neighbor(first_neighbor, neighbor),new_neighbor_list))\n",
+    "    new_list= list(map(lambda neighbor: neighbors!= first_neighbor, neighbors))\n",
+    "    return list(map(lambda neighbor: distance_with_neighbor(first_neighbor, neighbor),new_list))\n",
     "                            \n",
     "    pass"
    ]
