--- a/index.ipynb
+++ b/index.ipynb
@@ -544,7 +544,7 @@
    },
    "outputs": [],
    "source": [
-    "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
+    "def nearest_neighbors(first_neighbor, neighbors, number = No):\n",
     "    pass"
    ]
   },
