Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -544,7 +544,8 @@
    },
    "outputs": [],
    "source": [
-    "def nearest_neighbors(first_neighbor, neighbors, number = No):\n",
+    "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
+    "    \n",
     "    pass"
    ]
   },
