--- a/index.ipynb
+++ b/index.ipynb
@@ -545,7 +545,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    \n",
+    "    number=number or len\n",
     "    pass"
    ]
   },
