Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -545,7 +545,8 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    number=number or len\n",
+    "    number=number or len(neighbors)-1\n",
+    "    \n",
     "    pass"
    ]
   },
