--- a/index.ipynb
+++ b/index.ipynb
@@ -546,6 +546,7 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    number=number or len(neighbors)-1\n",
+    "    distance_all(first_neighbor, neighbors)\n",
     "    \n",
     "    pass"
    ]
