Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -546,7 +546,7 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    number=number or len(neighbors)-1\n",
-    "    return list(map(lambda distance_all(first_neighbor, neighbors)\n",
+    "    return list(map(lambda neighbors: distance_all(first_neighbor, neighbors),\n",
     "    \n",
     "    pass"
    ]
