--- a/index.ipynb
+++ b/index.ipynb
@@ -546,8 +546,8 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    number=number or len(neighbors)-1\n",
-    "    distance=distance_all(first_neighbor, neighbors)\n",
-    "    \n",
+    "    neighbor_distance=distance_all(first_neighbor, neighbors)\n",
+    "    sorted(distance)\n",
     "    \n",
     "    pass"
    ]
