Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -547,7 +547,7 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    number=number or len(neighbors)-1\n",
     "    neighbor_distance=distance_all(first_neighbor, neighbors)\n",
-    "    sorted_distances=sorted(neighbor_distance, key)\n",
+    "    sorted_distances=sorted(neighbor_distance, key=lambda neighbor=)\n",
     "    \n",
     "    pass"
    ]
