Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -538,26 +538,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 64,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    number=number or len(neighbors)-1\n",
     "    neighbor_distance=distance_all(first_neighbor, neighbors)\n",
-    "    sorted_distances=sorted(neighbor_distance, key=lambda neighbor: neighbor=)\n",
-    "    \n",
+    "    sorted_distances=sorted(neighbor_distance, key=lambda neighbor: neighbor['distance'])\n",
+    "    return sorted_distances[nu]\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 65,
+   "metadata": {},
    "outputs": [],
    "source": [
     "nearest_neighbors(fred, neighbors, 2)\n",
