Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -492,7 +492,7 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    new_list= list(filter(lambda neighbor: neighbors != first_neighbor, neighbors))\n",
+    "    new_list= list(filter(lambda neighbor: neighbor != first_neighbor, neighbors))\n",
     "    return list(map(lambda neighbor: distance_with_neighbor(first_neighbor, neighbor),new_list))\n",
     "              \n",
     "    pass"
